Prevent white space collapsing

--- a/src/index.scss
+++ b/src/index.scss
@@ -402,9 +402,11 @@ input:focus::placeholder {
 .nowrap {
   white-space: nowrap;
 }
-
 .pre {
   white-space: pre;
+}
+.break-spaces {
+  white-space: break-spaces;
 }
 
 .db               { display: block; }
